# AgentGuard

./: .gitignore  README.md  action_collector.py  agentguard_analysis.ipynb  clean.py  config.yml  config_best.yml  dashboard.py  eda.ipynb  folder.tree  main.py  model_training_evaluation.ipynb  requirements.txt  results_fold1.md  results_fold2.md  test_config.yml  test_results.md  train_cv.sh  train_fixed_split.sh
agentguard/: __init__.py
baselines/: dataset.py  features.py  run_baselines.py  train_torch.py
data/: preprocessing.py
demo/: .env.example  .gitignore  README.md  docker-compose.yml
demo/agent_worker/: Dockerfile  Dockerfile.dockerignore  pyproject.toml
demo/agent_worker/app/: __init__.py  events.py  main.py  router.py
demo/agent_worker/app/behaviors/: __init__.py  attack.py  benign.py
demo/agent_worker/fixtures/: notes.txt
demo/agent_worker/tests/: test_events.py  test_router.py
demo/control_plane/: Dockerfile  Dockerfile.dockerignore  pyproject.toml
demo/control_plane/app/: baseline.py  buffers.py  config.py  inference.py  main.py  orchestrator.py  runs.py  sse.py
demo/control_plane/scripts/: capture_baseline.py  export_norm_stats.py  smoke_forward.py
demo/control_plane/tests/: conftest.py  test_buffers.py  test_inference.py  test_main.py  test_orchestrator.py  test_runs.py  test_sse.py
demo/telemetry_collector/: Dockerfile  Dockerfile.dockerignore  pyproject.toml
demo/telemetry_collector/app/: __init__.py  aggregator.py  main.py  proc_sampler.py
demo/telemetry_collector/tests/: test_aggregator.py  test_proc_sampler.py
docs/: README.md  architecture.md  baselines.md  cli.md  configuration.md  data-collection-infrastructure.md  data-pipeline.md  deployment.md  evaluation.md  hyperparameter-sweep.md  training.md  troubleshooting.md
latents/: agentguard_seed42_fold1.npz  agentguard_seed42_fold2.npz  agentguard_seed42_fold3.npz  agentguard_seed42_fold4.npz  agentguard_seed42_fold5.npz
models/: agentguard.py  fusion.py  mamba.py  s4.py  stream1_encoder.py  (+1 more)
(+418 files in other folders)
