[project]
name = "telemetry-collector"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "numpy>=1.26",
  # data/preprocessing.py imports torch unconditionally at module scope, so we
  # need it even though aggregation itself is plain Python/numpy. CPU wheel only
  # — installed via the torch CPU index in the Dockerfile.
  "torch>=2.4.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
